--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1 class="display-4">Books catalog</h1>
+			<h1 class="display-4">Books catalog:</h1>
 			<div class="accordion" id="accordionExample">
 			</div>
 		</div>
